Third commit Signed-off-by: marco@vadopiano.it <marco@vadopiano.it>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Second row
     </main>
     <footer>
-        &copy Copyright 2025
+        &copy; Copyright 2025
     </footer>
 </body>
 </html>
