Added lists Signed-off-by: marco@vadopiano.it <marco@vadopiano.it>

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <h2>Main section subtitle</h2>
         Text in the main section<br>
         Second row
-    </main>
+        <ul>
+            <li>Non ordered list item 1</li>
+            <li>Non ordered list item 2</li>
+            </ul>
+    
+            <ol>
+            <li>Ordered list item 1</li>
+            <li>Ordered list item 2</li>
+            </ol>
+        </main>
     <footer>
         &copy; Copyright 2025
     </footer>
