Added images and icons Signed-off-by: marco@vadopiano.it <marco@vadopiano.it>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="icon_512.png">
     <title>Web page title</title>
 </head>
 <body>
@@ -15,8 +16,15 @@
     <main>
         <h1>Main section title</h1>
         <h2>Main section subtitle</h2>
-        Text in the main section<br>
-        Second row
+        <img src="https://dummyimage.com/500x100" alt="Image 500x100">
+        <p>Text in the main section</p>
+        <p>Second row</p>
+
+        <figure>
+            <img src="https://dummyimage.com/300x200" alt="Image 200x300">
+            <figcaption>Dummy image 300 x 200</figcaption>
+        </figure>
+
         <ul>
             <li>Non ordered list item 1</li>
             <li>Non ordered list item 2</li>
