Add links Signed-off-by: marco@vadopiano.it <marco@vadopiano.it>

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         </nav>
     </header>
     <main>
+        <a name="main-section"></a>
         <h1>Main section title</h1>
         <h2>Main section subtitle</h2>
-        <img src="https://dummyimage.com/500x100" alt="Image 500x100">
+        <img src="https://dummyimage.com/500x100" alt="Image 500x100" aria-label="Dummy image 500 x 100">
         <p>Text in the main section</p>
+        <a name="second-row"></a>
         <p>Second row</p>
 
         <figure>
@@ -36,7 +38,11 @@
             </ol>
         </main>
     <footer>
-        &copy; Copyright 2025
+        <p>&copy; Copyright 2025
+            <a href="#main-section">Main section</a>
+            <a href="#second-row">Second row</a>
+        </p>
+
     </footer>
 </body>
 </html>
