Update Signed-off-by: marco@vadopiano.it <marco@vadopiano.it>

--- a/index.html
+++ b/index.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="icon_512.png">
-    <title>Web page title</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Springtime In Michigan</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <header>
-        <nav class="mainMenu">
-            <a href="#">HOME</a> 
-            <a href="#">Page 1</a> 
-            <a href="#">Page 2</a> 
-        </nav>
-    </header>
-    <main>
-        <a name="main-section"></a>
-        <h1>Main section title</h1>
-        <h2>Main section subtitle</h2>
-        <img src="https://dummyimage.com/500x100" alt="Image 500x100" aria-label="Dummy image 500 x 100">
-        <p>Text in the main section</p>
-        <a name="second-row"></a>
-        <p>Second row</p>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="neighborhood.html">Neighborhood Walks</a></li>
+        <li><a href="parks.html">Walks in the Park</a></li>
+      </ul>
+    </nav>
+    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <h1>Springtime in Michigan</h1>
+  </header>
+  <main>
+    <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
+      it can be chilly at times, it is nice to walk my dog Bacon. This site includes some pictures I have taken on
+      these walks. </p>
 
-        <figure>
-            <img src="https://dummyimage.com/300x200" alt="Image 200x300">
-            <figcaption>Dummy image 300 x 200</figcaption>
-        </figure>
+    <p>Sometimes we walk around the neighborhood, other times we make it to the woods. Ann Arbor also has some
+      beautiful lakes and rivers including the <a
+        href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/">Huron River Watertrail</a> and
+      the <a href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx">Argo Park
+        Cascades</a>.</p>
 
-        <ul>
-            <li>Non ordered list item 1</li>
-            <li>Non ordered list item 2</li>
-            </ul>
-    
-            <ol>
-            <li>Ordered list item 1</li>
-            <li>Ordered list item 2</li>
-            </ol>
-        </main>
-    <footer>
-        <p>&copy; Copyright 2025
-            <a href="#main-section">Main section</a>
-            <a href="#second-row">Second row</a>
-        </p>
+  </main>
+  <footer>
+    <p>This page was originally created by Colleen van Lent for the <a
+        href="https://www.coursera.org/specializations/web-design"> Web Design for Everybody</a> Specialization.
+      Specialization. Students are invited to make changes.</p>
+  </footer>
 
-    </footer>
 </body>
+
 </html>
