--- a/parks.html
+++ b/parks.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="#main-content">Skip to Main Content</a>
   <header>
     <nav>
       <ul>
@@ -16,17 +17,15 @@
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
-    </nav>
     <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1>Michigan Parks</h1>
+    </nav>
+  <h1>Michigan Parks</h1>
 
   </header>
-  <main>
-    <div>
-      <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
-        width="100">
-      <img src="images/bacon_near_the_fort.png"
-        alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
+  <main id="main-content">
+    <div class="flex">
+      <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting" width="100">
+      <img src="images/bacon_near_the_fort.png" alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
       <img src="images/downed_tree.png" alt="a downed tree crossign a stream" width="100">
       <img src="images/fort_in_woods.png" alt="a small fort made of branches" width="100">
       <img src="images/huron_river_cascades.JPG" alt=" two people on a kayak approaching some small rapids" width="100">
