--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="it">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Springtime In Michigan</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Modern Gallery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <a href="#main-content">Skip to Main Content</a>
+  <div id="main-content-link">
+    <a href="#main-content">Skip to main content</a>
+  </div>
   <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="neighborhood.html">Neighborhood Walks</a></li>
-          <li><a href="parks.html">Walks in the Park</a></li>
-        </ul>
-      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-      </nav>
-    <h1>Springtime in Michigan</h1>
+    <h1>Modern Gallery</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="chi-siamo.html">At the sea</a></li>
+        <li><a href="contatti.html">In a city</a></li>
+      </ul>
+    </nav>
   </header>
+
   <main id="main-content">
-    <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
-      it can be chilly at times, it is nice to walk my dog Bacon. This site includes some pictures I have taken on
-      these walks. </p>
-
-    <p>Sometimes we walk around the neighborhood, other times we make it to the woods. Ann Arbor also has some
-      beautiful lakes and rivers including the <a
-        href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/">Huron River Watertrail</a> and
-      the <a href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx">Argo Park
-        Cascades</a>.</p>
-
+    <section class="gallery">
+      <img src="https://picsum.photos/id/1015/600/400" alt="Canyon">
+      <img src="https://picsum.photos/id/1025/600/400" alt="Covered dog">
+      <img src="https://picsum.photos/id/1035/600/400" alt="Waterfall">
+      <img src="https://picsum.photos/id/1016/600/400" alt="Red mountain">
+      <img src="https://picsum.photos/id/1018/600/400" alt="Green mountain">
+      <img src="https://picsum.photos/id/1023/600/400" alt="Byke jump">
+      <img src="https://picsum.photos/id/1028/600/400" alt="Winter">
+      <img src="https://picsum.photos/id/1036/600/400" alt="Winter tent">
+    </section>
   </main>
+
   <footer>
-    <p>This page was originally created by Colleen van Lent for the <a
-        href="https://www.coursera.org/specializations/web-design"> Web Design for Everybody</a> Specialization.
-      Specialization. Students are invited to make changes.</p>
+    <section class="privacy-policy">
+      <p><a href="#">Privacy Policy</a></p>
+    </section>
+    <section class="copyright">
+      <p>&copy; 2025 Marco Bettini - All rights reserved.</p>
+    </section>
+    <section class="social-media">
+      <p>
+        <a href="https://www.facebook.com" aria-label="Facebook"><img src="img/facebook_icon.png" alt="Facebook"></a>
+        <a href="https://www.twitter.com" aria-label="Twitter"><img src="img/twitter_icon.png" alt="Twitter"></a>
+        <a href="https://www.instagram.com" aria-label="Instagram"><img src="img/instagram_icon.png" alt="Instagram"></a>
+      </p>
+    </section>
   </footer>
-
 </body>
-
 </html>
